src/style/MemberCardDetails.scss
.dp-detailedCardPage{
    width: 100%;
    display : flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.dp-detailedCard {
    min-width: 20rem;
    max-width : 35rem;
    display: flex;
    flex-direction: column;
    background-image: var(--form-background2);
    margin-top: 2rem;
    padding: 2rem;
    border-radius: 1rem;
    box-shadow: var(--shadow-light);
    transition: 0.25s;
    .dp-memberName {
        padding : 2rem;
        padding-top : 0rem;
        font-size: 120%;
        .dp-highlight{
            font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
            font-size: 120%;
            font-weight: bold;
        }
    }

    .dp-space {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        width : 90%;
        .dp-pattern{
            background-image: var(--navbar-background);
            align-items: center;
            padding : 1rem;
            .dp-pad{
            
                padding : 0.75rem;
                
                .dp-memberInfo {
                    display: flex;
                    justify-content: right;
                    font-size: 120%;
                    padding: 1rem;
                    margin-top: 0.5rem;
                    font-weight: bold;
                    background-color: var(--card-info);
                    box-shadow: var(--shadow-very-light);
                    border-radius: 1rem;
                    color : linen;
                }
            }
        }
    }
    
    .dp-buttonDock {
        display : flex;
        width : 100%;
        justify-content: center;
        align-content: center;
        .dp-editIcon {
            background-image: var(--edit-icon);
            background-size: cover;
            padding : 0.75rem;
            margin : 0.5rem;
            margin-top: 0.25rem;
            align-content: unset;
        }
        .dp-deleteIcon {
            background-image: var(--delete-icon);
            background-size: cover;
            padding : 0.75rem;
            margin : 0.5rem;
        }
    }

    .dp-avatar {
        height: 170px;
        width : 170px;
        object-fit: cover;
        border-radius: 50%;
        box-shadow: var(--shadow-very-light);
        align-self: center;
    }

}
.dp-detailedCard:hover {
    box-shadow: var(--shadow-dark);
}

button {
    display : flex;
    align-items: center;
}
.backgroundUnset {
    background-image: var(--card-not-approved);
}

@media only screen and (max-width : 650px) {
    .dp-detailedCard {
        min-width: 360px;
        max-width : 360px;
        font-size: 90%;
    }
    .dp-detailedCard .dp-avatar{
        height: 130px;
        width : 130px;
    }
    .dp-detailedCard .dp-buttonDock {
        width : 290px;
        display: flex;
        justify-content: center;
    }
    .dp-detailedCard .dp-buttonDock .dp-deleteIcon {
        padding : 0.5rem;
        margin : 0.25rem;
    }
    .dp-detailedCard .dp-buttonDock .dp-editIcon {
        padding : 0.5rem;
        margin : 0.25rem;
    }
    button {
        font-size: 95%;
        margin-left : 0.5rem;
        margin-right : 0.5rem;
    }
}

